objects/SV_Order__c.object
<CustomObject>
    <fields>
        <fullName>Order_Id__c</fullName>
        <label>Order Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Order_Amount__c</fullName>
        <label>Total Order Amount</label>
        <summarizedField>SV_Order_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>SV_Order_Item__c.SV_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>order_create_date__c</fullName>
        <label>order create date</label>
        <type>DateTime</type>
    </fields>
    <label>SV Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SV Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SV Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>